# openstack-ansible-os_gnocchi

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  ansible-role-requirements.yml  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
doc/source/: conf.py  index.rst
env.d/: gnocchi.yml
examples/: playbook.yml
ext/: bootstrap-aio.sh
handlers/: main.yml
meta/: main.yml
tasks/: gnocchi_apache.yml  gnocchi_ceph_python_libs.yml  gnocchi_db_setup.yml  gnocchi_db_sync.yml  gnocchi_identity_setup.yml  gnocchi_init.yml  gnocchi_init_common.yml  gnocchi_init_systemd.yml  gnocchi_init_upstart.yml  gnocchi_install.yml  gnocchi_install_apt.yml  gnocchi_install_yum.yml  gnocchi_policy_setup.yml  gnocchi_post_install.yml  gnocchi_pre_install.yml  gnocchi_service_setup.yml  gnocchi_upstart_common_init.yml  gnocchi_upstart_init.yml  main.yml  service_setup.yml
templates/: api-paste.ini.j2  gnocchi-api-paste.ini.j2  gnocchi-httpd.conf.j2  gnocchi-ports.conf.j2  gnocchi-systemd-init.j2  gnocchi-systemd-tmpfiles.j2  gnocchi-upstart-init.j2  gnocchi-uwsgi.ini.j2  gnocchi-wsgi.py.j2  gnocchi.conf.j2  policy.json
tests/: ansible-role-requirements.yml  inventory  test-gnocchi-functional.yml  test-install-gnocchi.yml  test-install-infra.yml  test-install-keystone.yml  test-prepare-containers.yml  test-prepare-host.yml  test-prepare-keys.yml  test-vars.yml  test.yml
vars/: debian.yml  main.yml  redhat-7.yml  redhat.yml  suse-42.yml  suse.yml  ubuntu-14.04.yml  ubuntu-16.04.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
(+15 files in other folders)
